<resources>
    <string name="app_name">PixelShift</string>
    <string name="home">Home</string>
    <string name="templates">Templates</string>
    <string name="editoption">Edit</string>
    <string name="projects">Projects</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pixelshift_string">PixelShift</string>
    <string name="edit_your_image_string">Edit Your Image</string>
    <string name="home_ek3_string">HOME</string>
    <string name="pixelshift_application_is_a_image_editing_platform__then_the_features_are__string">PixelShift Application is a Image Editing Platform.Then the Features are:</string>
    <string name="crop___rotate_adjustments_filters___effects_text___typography_drawing___painting_string">Crop &amp; RotateAdjustmentsFilters &amp; EffectsText &amp; TypographyDrawing &amp; Painting</string>
    <string name="layers___masks_retouch___healing_undo___redo_export___share_templates___presets_string">Layers &amp; MasksRetouch &amp; HealingUndo &amp; RedoExport &amp; ShareTemplates &amp; Presets</string>

    <!-- templates strings -->

    <string name="apply_string">APPLY</string>
    <string name="apply_ek1_string">APPLY</string>
    <string name="apply_ek2_string">APPLY</string>
    <string name="apply_ek3_string">APPLY</string>
    <string name="templates_string">Templates</string>
    <string name="apply_ek4_string">APPLY</string>
    <string name="apply_ek5_string">APPLY</string>
    <string name="apply_ek6_string">APPLY</string>
    <string name="apply_ek7_string">APPLY</string>

    <!-- projects strings -->

    <string name="projects_string">Projects</string>

    <!-- sign_in strings -->

    <string name="sign_in_string">Sign in</string>
    <string name="email_address_string">Email Address</string>
    <string name="password_string">Password</string>
    <string name="log_in_string">Log in</string>
    <string name="forget_password__string">Forget Password?</string>
    <string name="_don_t_have_on_account_sign_up__string">Dont have on account?Sign up?</string>

    <!-- sign_up strings -->

    <string name="sign_up_string">Sign up</string>
    <string name="enter_your_name_string">Enter Your Name</string>
    <string name="enter_a_e_mail_string">Enter a E-mail</string>
    <string name="create_password_string">Create Password</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="create_account_string">Create account</string>
    <string name="_do_you_have_on_account_sign_in__string">Do you have on account?Sign in?</string>

    <!-- profile strings -->

    <string name="_1k_followers_string">1k Followers</string>
    <string name="your_templates_string">Your Templates</string>
    <string name="about_string">About</string>

    <!-- account strings -->

    <string name="follow_string">Follow</string>

    <!-- edit_option strings -->

    <string name="edit_image_string">Edit Image</string>
    <string name="ai_fill_background_string">Ai Fill Background</string>
    <string name="background_remover_string">Background Remover</string>
    <string name="college_string">College</string>
    <string name="apply_filters_string">Apply Filters</string>

    <!-- Editor -->

    <string name="splash_logo">splash_logo</string>
    <string name="file_provider">com.example.pixelperfect.provider</string>
    <string name="Add">Add</string>
    <string name="projects_text">Projects</string>
    <string name="email_feedback">hussain@hashmac.com</string>
    <string name="directory" translatable="false">/.PixelPerfectTemp/</string>
    <string name="share_txt">Hey view/Share this image</string>
    <string name="share_image_via">Share File via...</string>
    <string name="rating_promote">We are working hard for a better user experience. \nWe\'d greatly appreciate if you can rate us.</string>
    <string name="rating_title_1">Oh, no!</string>
    <string name="rating_title_2">We like you too!</string>
    <string name="rating_text_1">Please leave us some feedback.</string>
    <string name="rating_text_4">Thanks for your feedback.</string>
    <string name="rating_text_5">The best we can get :)</string>
    <string name="feedback">Feed back</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="camera">Camera</string>
    <string name="later">Later</string>
    <string name="email_app_not_installed">Email app not installed</string>
    <string name="share_text">I\'m using amazing Face Beauty! Get the free app at</string>

    <string name="size">Size</string>
    <string name="filter">Filter</string>
    <string name="crop">Crop</string>
    <string name="sticker">Sticker</string>
    <string name="text">Text</string>
    <string name="blur">Blur</string>
    <string name="ratio">Ratio</string>
    <string name="square">Square</string>
    <string name="eraser">Eraser</string>
    <string name="rate_us">Rate us</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="more_apps_from_us">More Apps from us</string>
    <string name="download_this">Download this awesome app</string>
    <string name="padding">Padding</string>
    <string name="developer_account_id">6744835063682873817</string>
    <string name="hsl">HSL</string>
    <string name="adjust">Adjust</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="hue">Hue</string>
    <string name="sharpen">Sharpen</string>
    <string name="exposure">Exposure</string>
    <string name="overlay">Overlay</string>
    <string name="user_name_hint">User Name</string>
</resources>