<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView android:id="@+id/edit_option"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <View
                    android:id="@+id/_bg__edit_option"
                    android:layout_width="413dp"
                    android:layout_height="930dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/bg_color_eo" />

                <RelativeLayout android:id="@+id/component_1"
                    android:layout_marginTop="26dp"
                    android:layout_marginStart="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <ImageView android:id="@+id/ellipse_2"
                        android:src="@drawable/ps_logo"
                        android:contentDescription="ellipse_2"
                        android:layout_marginStart="-4dp"
                        android:layout_marginTop="-7dp"
                        android:layout_width="54dp"
                        android:layout_height="54dp" />

                    <TextView android:id="@+id/pixelshift"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:shadowRadius="4"
                        android:shadowColor="#000000"
                        android:shadowDx="0"
                        android:shadowDy="3"
                        android:textColor="@color/rectangle_6_color"
                        android:layout_marginLeft="46dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="21.2dp"
                        android:text="@string/pixelshift_string"
                        />

                    <TextView android:id="@+id/edit_your_image"
                        android:shadowRadius="5"
                        android:shadowColor="#000000"
                        android:shadowDx="0"
                        android:shadowDy="2"
                        android:textColor="@color/rectangle_6_color"
                        android:layout_marginLeft="47dp"
                        android:layout_marginTop="23dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="9dp"
                        android:text="@string/edit_your_image_string"
                        />

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/edit_botton"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <View   android:id="@+id/rectangle_9"
                        android:background="@drawable/rectangle_9_shape"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="76dp"
                        android:layout_width="390dp"
                        android:layout_height="82dp"
                        android:layout_centerHorizontal="true"/>

                    <TextView android:id="@+id/edit_image"
                        android:textSize="15sp"
                        android:textColor="@color/_bg__edit_option_color"
                        android:layout_marginLeft="95dp"
                        android:layout_marginTop="108dp"
                        android:layout_width="132.5dp"
                        android:layout_height="21.5dp"
                        android:text="@string/edit_image_string"
                        />
                </RelativeLayout>

                <View   android:id="@+id/rectangle_18"
                    android:background="@drawable/rectangle_18_shape"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="173dp"
                    android:layout_width="390dp"
                    android:layout_height="82dp"
                    android:layout_centerHorizontal="true"/>

                <View   android:id="@+id/rectangle_19"
                    android:background="@drawable/rectangle_19_shape"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="270dp"
                    android:layout_width="390dp"
                    android:layout_height="82dp"
                    android:layout_centerHorizontal="true"/>

                <View   android:id="@+id/rectangle_22"
                    android:background="@drawable/rectangle_21_shape"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="464dp"
                    android:layout_width="390dp"
                    android:layout_height="82dp"
                    android:layout_centerHorizontal="true"/>

                <View   android:id="@+id/rectangle_21"
                    android:background="@drawable/rectangle_21_shape"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="367dp"
                    android:layout_width="390dp"
                    android:layout_height="82dp"
                    android:layout_centerHorizontal="true"/>

                <TextView android:id="@+id/ai_fill_background"
                    android:textSize="15sp"
                    android:textColor="@color/_bg__edit_option_color"
                    android:layout_marginLeft="95dp"
                    android:layout_marginTop="205dp"
                    android:layout_width="229.5dp"
                    android:layout_height="21.5dp"
                    android:text="@string/ai_fill_background_string"
                    />

                <TextView android:id="@+id/background_remover"
                    android:textSize="15sp"
                    android:textColor="@color/_bg__edit_option_color"
                    android:layout_marginLeft="95dp"
                    android:layout_marginTop="302dp"
                    android:layout_width="229.5dp"
                    android:layout_height="21.5dp"
                    android:text="@string/background_remover_string"
                    />

                <TextView android:id="@+id/college"
                    android:textSize="15sp"
                    android:textColor="@color/_bg__edit_option_color"
                    android:layout_marginLeft="95dp"
                    android:layout_marginTop="399dp"
                    android:layout_width="96.5dp"
                    android:layout_height="21.5dp"
                    android:text="@string/college_string"
                    />

                <TextView android:id="@+id/apply_filters"
                    android:textSize="15sp"
                    android:textColor="@color/_bg__edit_option_color"
                    android:layout_marginLeft="95dp"
                    android:layout_marginTop="496dp"
                    android:layout_width="169.5dp"
                    android:layout_height="21.5dp"
                    android:text="@string/apply_filters_string"
                    />
            </RelativeLayout>

        </ScrollView>
    </LinearLayout>

</FrameLayout>